--- a/public/styles/tweet-container.css
+++ b/public/styles/tweet-container.css
@@ -27,6 +27,7 @@
     height: 1.5em;
     margin-right: 0.5em;
     filter: grayscale(80%);
+    border-radius: 50%;
 }
 
 .posted-tweet:hover header .pic-name img {
