--- a/public/styles/nav.css
+++ b/public/styles/nav.css
@@ -30,4 +30,10 @@ nav #write p {
 
 nav #write i {
     color: red;
+    position: relative;
+    animation: mymove 1s infinite;
+}
+@keyframes mymove {
+    from {top: 0px;}
+    to {top: 5px;}
 }
