--- a/public/styles/layout.css
+++ b/public/styles/layout.css
@@ -29,3 +29,25 @@ body {
    width: 90%;
    margin: auto;
  }
+
+ body #toggle-btn {
+  position: fixed;
+  bottom: 15px;
+  right: 30px; 
+  z-index: 1;
+  background: none;
+  border: none;
+  outline: none;
+  color: white;
+  background-color: red;
+  height: 60px;
+  width: 60px;
+  border-radius: 50%;
+  display: none;
+ }
+
+ body #toggle-btn:hover {
+   background-color: #ff5500;
+   cursor: pointer;
+   transition: 0.3s;
+ }
