--- a/public/styles/header.css
+++ b/public/styles/header.css
@@ -1,19 +1,35 @@
 #page-header {
-    height: 400px;
+    height: 360px;
     width: 100%;
     background-color: #dba400;
-    background-image: url(http://www.transparenttextures.com/patterns/asfalt-light.png);
     background-image: url(http://www.transparenttextures.com/patterns/asfalt-light.png);
     display: flex;
     flex-direction: column;
     align-items: center; 
-    margin-top: 120px;
+    margin-top: 89px;
 }
 
 #page-header #avatar {
-    margin-top: 1em;
+    margin-top: 0.5em;
 }
 
 #page-header h2 {
-    margin: 0;
+    
+    margin-top: 0.5em;
+}
+
+@media only screen and (min-width: 768px) {
+    #page-header {
+        margin-top: 109px;
+    }
+}
+
+@media only screen and (min-width: 1024px) {
+    #page-header {
+        margin: 200px 3.5em 0 2.5em;
+        width: 30%;
+        min-width: 15em;
+        height: 350px;
+        position: fixed;
+    }
 }
