--- a/public/styles/nav.css
+++ b/public/styles/nav.css
@@ -1,7 +1,8 @@
 nav {
-    height: 120px;
+    height: 90px;
     width: 100%;
-    background-color: #4056A1;
+    background-color: #dba400;
+    background-image: url(http://www.transparenttextures.com/patterns/asfalt-light.png);
     color: #FFFFFF;
     padding: 1.5em;
     display:flex;
@@ -14,7 +15,7 @@ nav {
 nav span {
     font-family: 'Bungee', sans-serif;
     font-weight: 300;
-    font-size: 40px;
+    font-size: 3.5vH;
 }
 
 nav #write {
@@ -27,6 +28,7 @@ nav #write {
 
 nav #write button {
     background: none;
+    font-size: 2.5vH;
     border: none;
     color: white;
     outline: none;
@@ -52,3 +54,21 @@ nav #write i {
     to {top: 5px;}
 }
 
+@media only screen and (min-width: 768px) {
+    nav {
+        height: 110px;
+    }
+    nav span {
+        font-size: 36px;
+    }
+    nav #write button {
+        font-size: 1em;
+    }
+}
+
+@media only screen and (min-width: 1024px) {
+    nav {
+        background-color: #4056A1;
+        background-image: none;
+    }
+  }
